http_parser.c

#line 1 "http_parser.rl"
/**
 * Copyright (c) 2005 Zed A. Shaw
 * You can redistribute it and/or modify it under the same terms as Ruby.
 *
 * Copyright (c) 2012 by Michael Neumann (mneumann@ntecs.de)
 */

// compile with ragel -G2 -C ...

/** Machine **/


#line 88 "http_parser.rl"


/** Data **/

#line 21 "http_parser.c"
static const int http_parser_start = 1;
static const int http_parser_first_final = 180;
static const int http_parser_error = 0;

static const int http_parser_en_main = 1;


#line 92 "http_parser.rl"

#include "http_parser.h"
#include <assert.h>

#define ASSIGN_FIELD(field, fpc) \
  parser->data.field.from = parser->mark; \
  parser->data.field.to = (byte_pos)(fpc - buffer);

static void http_parser_data_init(struct http_parser_data *data) {
  #define INIT_RANGE(field) \
    data->field.from = -1;  \
    data->field.to = -1;

  INIT_RANGE(request_uri);
  INIT_RANGE(fragment);
  INIT_RANGE(request_method_other);
  INIT_RANGE(request_path);
  INIT_RANGE(query);

  data->content_length = -1;
  data->http_version = -1;
  data->request_method = -1;
  data->header_connection = -1;

  INIT_RANGE(header_content_type);
  INIT_RANGE(header_date);
  INIT_RANGE(header_host);
  INIT_RANGE(header_user_agent);
  INIT_RANGE(header_referer);
  INIT_RANGE(header_cookie);

  data->body_start = -1;

  #undef INIT_RANGE
}

void http_parser_init(struct http_parser *parser) {
  int cs = 0;
  
#line 69 "http_parser.c"
	{
	cs = http_parser_start;
	}

#line 131 "http_parser.rl"
  parser->saved_cs = cs;

  http_parser_data_init(&parser->data);
}

byte_pos http_parser_run(struct http_parser *parser,
                         const char *buffer, byte_pos buffer_length, byte_pos buffer_offset) {

  assert(parser);
  assert(buffer);

  if (buffer_length == 0) return 0;

  assert(buffer_length > 0);
  assert(buffer_offset < buffer_length);

  // Ragel uses: cs, p, pe
  int cs = parser->saved_cs;               // current ragel machine state
  const char *p = buffer + buffer_offset;  // pointer to start of data
  const char *pe = buffer + buffer_length; // pointer to end of data

  
#line 97 "http_parser.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 36: goto tr0;
		case 67: goto tr2;
		case 68: goto tr3;
		case 71: goto tr4;
		case 72: goto tr5;
		case 79: goto tr6;
		case 80: goto tr7;
		case 84: goto tr8;
		case 95: goto tr0;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto tr0;
	} else if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto tr0;
	} else
		goto tr0;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 135 "http_parser.c"
	switch( (*p) ) {
		case 32: goto tr9;
		case 36: goto st123;
		case 95: goto st123;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st123;
	} else if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st123;
	} else
		goto st123;
	goto st0;
tr9:
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
tr208:
#line 29 "http_parser.rl"
	{ parser->data.request_method = HTTP_REQUEST_METHOD_CONNECT; }
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
tr214:
#line 27 "http_parser.rl"
	{ parser->data.request_method = HTTP_REQUEST_METHOD_DELETE; }
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
tr217:
#line 22 "http_parser.rl"
	{ parser->data.request_method = HTTP_REQUEST_METHOD_GET; }
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
tr221:
#line 24 "http_parser.rl"
	{ parser->data.request_method = HTTP_REQUEST_METHOD_HEAD; }
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
tr228:
#line 25 "http_parser.rl"
	{ parser->data.request_method = HTTP_REQUEST_METHOD_OPTIONS; }
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
tr233:
#line 23 "http_parser.rl"
	{ parser->data.request_method = HTTP_REQUEST_METHOD_POST; }
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
tr235:
#line 26 "http_parser.rl"
	{ parser->data.request_method = HTTP_REQUEST_METHOD_PUT; }
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
tr240:
#line 28 "http_parser.rl"
	{ parser->data.request_method = HTTP_REQUEST_METHOD_TRACE; }
#line 30 "http_parser.rl"
	{
    parser->data.request_method = HTTP_REQUEST_METHOD_OTHER;
    ASSIGN_FIELD(request_method_other, p);
  }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 233 "http_parser.c"
	switch( (*p) ) {
		case 42: goto tr11;
		case 43: goto tr12;
		case 47: goto tr13;
		case 58: goto tr14;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto tr12;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr12;
	} else
		goto tr12;
	goto st0;
tr11:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 257 "http_parser.c"
	switch( (*p) ) {
		case 32: goto tr15;
		case 35: goto tr16;
	}
	goto st0;
tr15:
#line 19 "http_parser.rl"
	{ ASSIGN_FIELD(request_uri, p); }
	goto st5;
tr154:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
#line 20 "http_parser.rl"
	{ ASSIGN_FIELD(fragment, p); }
	goto st5;
tr157:
#line 20 "http_parser.rl"
	{ ASSIGN_FIELD(fragment, p); }
	goto st5;
tr165:
#line 37 "http_parser.rl"
	{ ASSIGN_FIELD(request_path, p); }
#line 19 "http_parser.rl"
	{ ASSIGN_FIELD(request_uri, p); }
	goto st5;
tr176:
#line 17 "http_parser.rl"
	{ parser->mark_query = (byte_pos)(p - buffer); }
#line 39 "http_parser.rl"
	{
    parser->data.query.from = parser->mark_query;
    parser->data.query.to = (byte_pos)(p - buffer);
  }
#line 19 "http_parser.rl"
	{ ASSIGN_FIELD(request_uri, p); }
	goto st5;
tr180:
#line 39 "http_parser.rl"
	{
    parser->data.query.from = parser->mark_query;
    parser->data.query.to = (byte_pos)(p - buffer);
  }
#line 19 "http_parser.rl"
	{ ASSIGN_FIELD(request_uri, p); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 307 "http_parser.c"
	if ( (*p) == 72 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 84 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 84 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 80 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 47 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 49 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 46 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 48: goto st13;
		case 49: goto st104;
	}
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 13 )
		goto tr26;
	goto st0;
tr26:
#line 35 "http_parser.rl"
	{	parser->data.http_version = 10; }
	goto st14;
tr39:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr42:
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr62:
#line 68 "http_parser.rl"
	{ parser->data.header_connection = HTTP_CONNECTION_CLOSE; }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr72:
#line 69 "http_parser.rl"
	{ parser->data.header_connection = HTTP_CONNECTION_KEEP_ALIVE; }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr87:
#line 56 "http_parser.rl"
	{ }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr94:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
#line 61 "http_parser.rl"
	{ ASSIGN_FIELD(header_content_type, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr97:
#line 61 "http_parser.rl"
	{ ASSIGN_FIELD(header_content_type, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr103:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
#line 66 "http_parser.rl"
	{ ASSIGN_FIELD(header_cookie, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr106:
#line 66 "http_parser.rl"
	{ ASSIGN_FIELD(header_cookie, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr112:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
#line 62 "http_parser.rl"
	{ ASSIGN_FIELD(header_date, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr115:
#line 62 "http_parser.rl"
	{ ASSIGN_FIELD(header_date, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr121:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
#line 63 "http_parser.rl"
	{ ASSIGN_FIELD(header_host, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr124:
#line 63 "http_parser.rl"
	{ ASSIGN_FIELD(header_host, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr133:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
#line 65 "http_parser.rl"
	{ ASSIGN_FIELD(header_referer, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr136:
#line 65 "http_parser.rl"
	{ ASSIGN_FIELD(header_referer, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr148:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
#line 64 "http_parser.rl"
	{ ASSIGN_FIELD(header_user_agent, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr151:
#line 64 "http_parser.rl"
	{ ASSIGN_FIELD(header_user_agent, p); }
#line 76 "http_parser.rl"
	{
    // XXX: What to do with the other headers? call function?
    //on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(fpc - buffer.ptr))));
  }
	goto st14;
tr152:
#line 36 "http_parser.rl"
	{	parser->data.http_version = 11; }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 544 "http_parser.c"
	if ( (*p) == 10 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 13: goto st16;
		case 33: goto tr29;
		case 67: goto tr30;
		case 68: goto tr31;
		case 72: goto tr32;
		case 82: goto tr33;
		case 85: goto tr34;
		case 99: goto tr30;
		case 100: goto tr31;
		case 104: goto tr32;
		case 114: goto tr33;
		case 117: goto tr34;
		case 124: goto tr29;
		case 126: goto tr29;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr29;
		} else if ( (*p) >= 35 )
			goto tr29;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr29;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr29;
		} else
			goto tr29;
	} else
		goto tr29;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 10 )
		goto tr35;
	goto st0;
tr35:
#line 81 "http_parser.rl"
	{
    parser->data.body_start = (byte_pos)(p - buffer + 1);
    {p++; cs = 180; goto _out;}
  }
	goto st180;
st180:
	if ( ++p == pe )
		goto _test_eof180;
case 180:
#line 604 "http_parser.c"
	goto st0;
tr29:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 614 "http_parser.c"
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
tr40:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
	goto st18;
tr37:
#line 71 "http_parser.rl"
	{
    parser->field_name.from = parser->mark;
    parser->field_name.to = (byte_pos)(p - buffer);
  }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 654 "http_parser.c"
	switch( (*p) ) {
		case 13: goto tr39;
		case 32: goto tr40;
	}
	goto tr38;
tr38:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 668 "http_parser.c"
	if ( (*p) == 13 )
		goto tr42;
	goto st19;
tr30:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 680 "http_parser.c"
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 79: goto st21;
		case 111: goto st21;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 78: goto st22;
		case 79: goto st65;
		case 110: goto st22;
		case 111: goto st65;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 78: goto st23;
		case 84: goto st46;
		case 110: goto st23;
		case 116: goto st46;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 69: goto st24;
		case 101: goto st24;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 67: goto st25;
		case 99: goto st25;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 84: goto st26;
		case 116: goto st26;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 73: goto st27;
		case 105: goto st27;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 79: goto st28;
		case 111: goto st28;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr37;
		case 78: goto st29;
		case 110: goto st29;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 33: goto st17;
		case 58: goto tr54;
		case 124: goto st17;
		case 126: goto st17;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto st17;
		} else if ( (*p) >= 35 )
			goto st17;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st17;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
tr55:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
	goto st30;
tr54:
#line 71 "http_parser.rl"
	{
    parser->field_name.from = parser->mark;
    parser->field_name.to = (byte_pos)(p - buffer);
  }
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
#line 994 "http_parser.c"
	switch( (*p) ) {
		case 13: goto tr39;
		case 32: goto tr55;
		case 67: goto tr56;
		case 75: goto tr57;
		case 99: goto tr56;
		case 107: goto tr57;
	}
	goto tr38;
tr56:
#line 16 "http_parser.rl"
	{ parser->mark = (byte_pos)(p - buffer); }
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 1012 "http_parser.c"
	switch( (*p) ) {
		case 13: goto tr42;
		case 76: goto st32;
		case 108: goto st32;
	}
	goto st19;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	switch( (*p) ) {
		case 13: goto tr42;
		case 79: goto st33;
		case 111: goto st33;
	}
	goto st19;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	switch( (*p) ) {
		case 13: goto tr42;
		case 83: goto st34;
		case 115: goto st34;
	}
	goto st19;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	switch( (*p) ) {
